# SPDX-License-Identifier: CC0-1.0

option('repository',
        type : 'string',
        value : 'https://git.libcamera.org/libcamera/libcamera.git',
        description : 'Base repository to build from')

option('revision',
        type : 'string',
        value : 'master',
        description : 'Git revision to checkout')

option('version',
        type : 'string',
        value : 'unknown',
        description : 'libcamera version')

option('patch',
        type : 'string',
        value : 'pypatch',
        description : 'Patch to apply')

option('pycamera',
        type : 'feature',
        value : 'enabled',
        description : 'Enable libcamera Python bindings - must be enabled')