[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pyyaml', 'pybind11', 'jinja2', 'ply']

[project]
name = 'rpi-libcamera'
version = '0.1a9'
description = 'libcamera python bindings'
readme = 'README.md'

[project.urls]
Source = "https://github.com/raspberrypi/pylibcamera"
"RPi libcamera Source" = "https://github.com/raspberrypi/libcamera"

[tool.meson-python.args]
setup = [
    '-Drevision=v0.4.0+rpt20250213',
    '-Drepository=https://github.com/raspberrypi/libcamera.git',
    '-Dversion=v0.4.0+53-29156679'
]

[tool.flit.module]
name = "libcamera"
